--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,4 +1,4 @@
-.main_btn {
+.main__btn {
   background: linear-gradient(165deg, $color-secondary, $color-primary);
   font-size: 1.1em;
   color: white;
@@ -13,15 +13,24 @@
   }
 }
 
-.command_btn {
+.command__btn {
   display: flex;
   justify-content: center;
-  .main_btn--modifier {
+  .main__btn-modifier {
     padding: 10px 40px 10px 40px;
     margin: 0 0 60px 0;
     &:hover {
       box-shadow: 0px 5px 1px $color-shadow;
       filter: brightness(110%);
+    }
+  }
+}
+
+@media (min-width: 769px) {
+  .full__menu {
+    width: 100%;
+    .command__btn {
+      display: block;
     }
   }
 }
